--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-nodemon": "^1.0.5",
     "gulp-plumber": "^0.6.6",
     "gulp-print": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^3.0.1",
     "gulp-rev-replace": "^0.3.4",
     "gulp-task-listing": "^1.0.0",
