--- a/package.json
+++ b/package.json
@@ -25,35 +25,37 @@
   },
   "devDependencies": {
     "browser-sync": "^2.14.3",
-    "del": "^1.1.1",
+    "del": "^2.2.2",
     "gulp": "^3.8.11",
-    "gulp-angular-templatecache": "^1.5.0",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-bump": "^0.2.1",
-    "gulp-csso": "^1.0.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.0",
-    "gulp-inject": "^1.2.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.2",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-bump": "^2.4.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-filter": "^4.0.0",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-inject": "^4.1.0",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.0.0",
-    "gulp-load-plugins": "^0.8.0",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-minify-html": "^1.0.0",
-    "gulp-ng-annotate": "^0.5.2",
-    "gulp-nodemon": "^1.0.5",
-    "gulp-plumber": "^0.6.6",
-    "gulp-print": "^1.1.0",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.3.4",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-napkin": "^0.1.0",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-task-listing": "^1.0.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-useref": "^1.1.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.3",
-    "jshint-stylish": "^1.0.0",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "^2.2.1",
     "sinon": "^1.12.2",
-    "wiredep": "^2.2.2",
-    "yargs": "^3.1.0"
+    "wiredep": "^4.0.0",
+    "yargs": "^5.0.0"
   }
 }
